--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'idea'
+    id 'application'
 }
 
 group 'org-jim'
@@ -22,7 +24,11 @@ dependencies {
 
 }
 
-    compileKotlin {
+application {
+    mainClassName= 'org.jim.ninthage.Runner'
+}
+
+compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 compileTestKotlin {
